--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -2,7 +2,7 @@
     background-color: var(--night);
     color: var(--lavender);
 
-    height: 100vh;
+    height: calc(100vh - 70px);
 
     display: flex;
     align-items: center;
@@ -13,7 +13,8 @@
     height: 50%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 50px;
     flex-direction: column;
 }
 
@@ -34,7 +35,7 @@
 
 .formlogin input:focus{
     border-bottom: 1px solid var(--phlox);
-    box-shadow: 0px 0px 37px -10px rgba(192,82,241,1);
+    box-shadow: 0px 10px 15px -15px rgba(192,82,241,1);
 }
 
 .formlogin textarea:focus, 
@@ -49,8 +50,12 @@
     border-radius: 54.916px;
     background: var(--gradientePurple);
     border: none;
-    padding: 15px 40px;
+    padding: 10px 35px;
     color: var(--lavender);
-    font-weight: 600;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.formlogin span{
+    font-size: 14px;
 }
